--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,9 @@ You can install the development version of housingdecay from [GitHub](https://gi
 2. In RStudio, go to the bottom-right pane, click on "Packages" and then "Install".
 3. Select install from tar.gz and pick the downloaded file, then click "Install"
 
+Note: If you download from Safari, then manually rename the file to have extension
+tar.gz (not .tar) and follow steps 1-3.
+
 ## Example
 
 Open the shiny app with:
